--- a/wahdvlib/wahdvlib.csproj
+++ b/wahdvlib/wahdvlib.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="dao.cs" />
     <Compile Include="wahdvlib.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
